# tenjudge-agent

./: .env  AGENTS.md  README.md  main.py  pyproject.toml
app/: main.py
app/agents/: code_summarize_agent.py  context.py  models.py  orchestrator.py  plan_agent.py  title_agent.py
app/core/: config.py  db.py  redis.py  response.py
app/rag/: importer.py  retriever.py  schema.sql
app/rag/docs/knowledge/: auth.md  author.md  contest.md  judge.md  overview.md  problem.md  submit.md
app/repository/: agent_database_tool_setup.md  agent_schema.sql  agent_tool_views.sql  conversations.py  messages.py  schema.sql  states.py  tasks.py
app/router/: chat.py  conversation.py
app/service/: auth.py  chat.py  runner.py  tenjudge_server.py
app/tools/: code_file.py  database.py  judge.py  misc.py  rag.py
tests/agents/: test_code_summarize_agent.py  test_orchestrator.py  test_plan_agent.py  test_title_agent.py
tests/core/: test_response.py
tests/router/: test_conversation.py
tests/service/: test_chat_sse.py  test_runner.py  test_tenjudge_server.py
tests/tools/: test_code_file.py  test_database.py  test_judge.py
